--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                             d="M18.9 20.77V0h4.93v20.77zM0 10.39a8.56 8.56 0 1 1 8.56 8.56A8.56 8.56 0 0 1 0 10.4zm5.97-.01a2.6 2.6 0 1 0 2.6-2.6 2.6 2.6 0 0 0-2.6 2.6zm27 5.2l-1.88-1.87-1.87 1.88H25.9V12.3l1.9-1.9-1.9-1.89V5.18h3.27l1.92 1.92 1.93-1.92h3.27v3.33l-1.9 1.9 1.9 1.9v3.27z">
                         </path>
                     </svg></a>
-                <a href="#"><img src="/images/car icon.png" alt="Motors"><span>Motor</span></a>
-                <a href="#"><img src="/images/home icon.png" alt="Property" class="_5120d4ee"> <span>Property</span></a>
+                <a href="#"><img src="./images/car icon.png" alt="Motors"><span>Motor</span></a>
+                <a href="#"><img src="./images/home icon.png" alt="Property" class="_5120d4ee"> <span>Property</span></a>
             </div>
             <div class="login-buttons">
                 <a href="#">Login</a>
